gitops/apps/cheesecake/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cheesecake
  namespace: cheesecake
spec:
  parentRefs:
    - name: lab-gateway
      namespace: gateway-infra
      sectionName: https
  hostnames:
    - cheesecake.devbycory.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: Referrer-Policy
                value: "no-referrer"
      backendRefs:
        - name: cheesecake
          port: 80
